<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="#0353a4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_karakter"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/genshinchar_image"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/title_vision"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nama_karakter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/title_region"
        android:text="@string/vision"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textColor="#061A40"/>

    <TextView
        android:id="@+id/title_region"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nama_karakter"
        app:layout_constraintStart_toEndOf="@id/title_vision"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/region"
        android:textColor="#061A40"/>

    <ImageView
        android:id="@+id/img_region"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/region_image"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/title_region"
        app:layout_constraintStart_toStartOf="@id/title_region"
        app:layout_constraintEnd_toEndOf="@id/title_region"
        android:foregroundGravity="center"
        tools:srcCompat="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/nama_vision"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/img_vision"
        app:layout_constraintStart_toStartOf="@id/img_vision"
        app:layout_constraintEnd_toEndOf="@id/img_vision"
        android:text="@string/vision_name"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#061A40"/>

    <ImageView
        android:id="@+id/img_vision"
        android:contentDescription="@string/vision_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/title_vision"
        app:layout_constraintStart_toStartOf="@id/title_vision"
        app:layout_constraintEnd_toEndOf="@id/title_vision"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nama_region"
        android:layout_width="150dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/nama_region"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/img_region"
        app:layout_constraintStart_toStartOf="@id/img_region"
        app:layout_constraintEnd_toEndOf="@id/img_region"
        android:textColor="#061A40"/>


    <TextView
        android:id="@+id/nama_karakter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genshinchar_name"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_karakter"
        android:textColor="#061A40"/>

    <TextView
        android:id="@+id/profil_karakter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/description"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nama_vision"
        android:textColor="#061A40"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>