<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_me"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:background="#0353a4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"/>
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/fotosaya"
        android:foregroundGravity="center"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_centerHorizontal="true"
        app:civ_border_color="#003559"
        app:civ_border_width="5dp"/>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_saya"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#061a40"
        android:layout_below="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_saya"
        android:textSize="16sp"
        android:textColor="#061a40"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        app:layout_constraintStart_toStartOf="@id/profile_name"
        app:layout_constraintEnd_toEndOf="@id/profile_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/domisili_saya"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="#061a40"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintEnd_toEndOf="@id/email" />

    <ImageView
        android:id="@+id/img_instagram"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/location"
        android:onClick="openInstagramProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_linkedin"
        android:src="@drawable/instagram"
        android:contentDescription="@string/instagramprofile" />

    <ImageView
        android:id="@+id/img_linkedin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/location"
        android:onClick="openLinkedinProfile"
        app:layout_constraintStart_toEndOf="@id/img_instagram"
        app:layout_constraintEnd_toEndOf="@id/img_github"
        android:src="@drawable/linkedin"
        android:contentDescription="@string/instagramprofile" />

    <ImageView
        android:id="@+id/img_github"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/location"
        android:onClick="openGithubProfile"
        app:layout_constraintStart_toEndOf="@id/img_linkedin"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/github"
        android:contentDescription="@string/instagramprofile" />

    <TextView
        android:id="@+id/motivation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/img_linkedin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/motivation"
        android:textColor="#061a40"
        android:textSize="15sp"
        android:gravity="center"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
